add reviews and change desings

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -12,6 +12,7 @@ $layout-font: 'Open Sans', sans-serif;
   // colors
 
 $dgray: #414a53;
+$bgrey: #5A6A85;
 $mgray: #95999e;
 $lgray: #d8dde1;
 $white: #FFFFFF;
