--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -42,12 +42,24 @@
 
 .dashboard{
   display: flex;
-  gap: 30px;
+  //gap: 30px;
   align-items: flex-start;
 }
 
 .right_page{
-  padding-top: 30px;
+  padding: 30px;
+  box-sizing: border-box;
+  width: 100%;
+  overflow-y: scroll;
+  height: 100vh;
+  &::-webkit-scrollbar{
+    width: 10px;
+    background: $lgray;
+  }
+  &::-webkit-scrollbar-thumb{
+    background: $green;
+    border-radius: 20px;
+  }
   &__breadcrumbs{
     font-size: 24px;
     font-weight: 600;
@@ -112,6 +124,58 @@
     label{
       display: flex;
       flex-direction: column;
+    }
+  }
+}
+
+.review_accordion{
+  background: $bg-lgray;
+  padding: 15px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  width: 100%;
+  margin-bottom: 20px;
+  p{
+    margin: 0;
+  }
+  &__header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    & > div{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      b{
+        font-size: 16px;
+      }
+    }
+    &__calendar{
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      margin-left: 5px;
+    }
+  }
+  &__content{
+    padding-top: 20px;
+    ul{
+      li{
+        margin-bottom: 4px;
+        a{
+          color: $bgrey;
+          font-weight: 400;
+        }
+        span{
+          color: $green;
+          font-weight: 500;
+          margin-right: 5px;
+        }
+      }
+    }
+    p{
+      font-size: 15px;
     }
   }
 }
