--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -113,7 +113,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: calc(100% / 3);
+    //width: calc(100% / 3);
     & > div{
       display: flex;
       flex-direction: column;
@@ -122,8 +122,7 @@
       padding: 10px;
     }
     label{
-      display: flex;
-      flex-direction: column;
+      display: flex !important;
     }
   }
 }
@@ -178,4 +177,13 @@
       font-size: 15px;
     }
   }
+}
+
+.col-inp {
+  flex-direction: column;
+}
+
+.slide-img {
+  width: 250px;
+  margin-top: 50px;
 }
