footer, header, requests, reviews, contact

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,47 @@
 @import "vars";
 
+.vl-btn{
+  padding: 8px 16px;
+  background: $blue;
+  font-size: 1rem;
+  color: #fff;
+  border: 1px solid $blue;
+  border-radius: 7px;
+  font-weight: 500;
+  transition: 0.2s;
+  line-height: 1.5rem;
+  display: inline-block;
+  &:hover{
+    background: $dark-blue;
+    border-color: $dark-blue;
+  }
+  &.loading{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: $lgray;
+    border-color: $lgray;
+    color: $bgrey;
+    cursor: auto;
+  }
+  &.vl-green{
+    background: $green;
+    border-color: $green;
+    &:hover{
+      background: $dark-green;
+      border-color: $dark-green;
+    }
+  }
+
+  &.vl-red{
+    background: $red;
+    border-color: $red;
+    &:hover{
+      background: $dark-red;
+      border-color: $dark-red;
+    }
+  }
+}
 .sidebar-item{
   transition: 0.2s;
   &__list{
@@ -15,8 +57,8 @@
       cursor: pointer;
       transition: 0.1s;
       &:hover, &.active{
-        background: rgba($green, 0.1);
-        color: $green;
+        background: rgba($blue, 0.1);
+        color: $blue;
       }
     }
   }
@@ -26,6 +68,7 @@
     gap: 15px;
   }
 }
+
 .sidebar--border{
   //border-right: 1px solid #000;
   height: 100vh;
@@ -36,7 +79,7 @@
     background: $bg-lgray;
   }
   &::-webkit-scrollbar-thumb{
-    background: $green;
+    background: $blue;
   }
 }
 
@@ -57,7 +100,7 @@
     background: $lgray;
   }
   &::-webkit-scrollbar-thumb{
-    background: $green;
+    background: $blue;
     border-radius: 20px;
   }
   &__breadcrumbs{
@@ -68,7 +111,7 @@
     gap: 10px;
     p{
       &.active{
-        color: $green;
+        color: $blue;
       }
     }
   }
@@ -82,7 +125,7 @@
       align-items: center;
       gap: 10px;
       font-weight: 500;
-      color: $green;
+      color: $blue;
       box-shadow: 0 5px 10px 5px rgba(0,0,0, 0.1);
       padding: 10px 20px;
       border-radius: 10px;
@@ -100,7 +143,7 @@
   align-items: flex-start;
   gap: 10px;
   h3{
-    background: $green;
+    background: $blue;
     color: #fff;
     padding: 5px 10px;
     border-radius: 20px;
@@ -168,7 +211,7 @@
           font-weight: 400;
         }
         span{
-          color: $green;
+          color: $blue;
           font-weight: 500;
           margin-right: 5px;
         }
@@ -176,6 +219,475 @@
     }
     p{
       font-size: 15px;
+    }
+  }
+}
+
+.officesInfo{
+  form{
+    //width: 280px;
+    //min-width: 280px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 15px;
+  }
+  &__header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__form{
+    &__btns{
+      display: flex;
+      align-items: center;
+      align-self: flex-end;
+      margin-top: 20px;
+    }
+    &__header{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 20px;
+      svg{
+        cursor: pointer;
+        &:hover{
+          color: $red;
+        }
+      }
+    }
+    &__inputs{
+      display: flex;
+      gap: 30px;
+      width: 100%;
+      margin-top: 10px;
+      & > div{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+    }
+  }
+  &__forms{
+    display: flex;
+    gap: 60px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $lgray;
+    &:last-child{
+      overflow-x: scroll;
+      border-bottom: none;
+    }
+    label{
+      display: flex !important;
+    }
+    &::-webkit-scrollbar{
+      height: 4px;
+      background: $lgray;
+    }
+    &::-webkit-scrollbar-thumb{
+      background: $blue;
+      border-radius: 20px;
+    }
+  }
+  &__details{
+    background: $bg-lgray;
+    padding: 15px;
+    border-radius: 10px;
+    ul{
+      margin: 20px 0 0;
+      li{
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        gap: 7px;
+        span{
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          color: $blue;
+        }
+        a{
+          color: $bgrey;
+          svg{
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
+    &__editors{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+}
+
+.mapEdit {
+  label{
+    display: flex !important;
+  }
+  &__maps{
+    display: flex;
+    gap: 40px;
+    ul{
+      margin-top: 30px;
+      li{
+        margin-top: 6px;
+        font-size: 15px;
+        span{
+          color: $blue;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
+
+.bannerEdit{
+  label{
+    display: flex !important;
+  }
+  button{
+    box-shadow: none;
+    &:hover{
+      box-shadow: none;
+    }
+  }
+  form{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 20px 0;
+  }
+  &__preview{
+    width: 100%;
+    height: 500px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+    &__gradient{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: linear-gradient(90deg,#003d90e6 0,#00997d99 50%,#00000026 60%);
+      top: 0;
+      left: 0;
+    }
+    &__text{
+      position: absolute;
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      left: 5%;
+      span{
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: #ffffff59;
+        color: transparent;
+        font-size: 150px;
+        font-weight: 700;
+        left: 10px;
+        letter-spacing: -.05em;
+        position: absolute;
+        white-space: nowrap;
+      }
+      b{
+        font-size: 50px;
+        position: relative;
+        z-index: 1;
+        color: #fff;
+        font-weight: 800;
+        text-transform: capitalize;
+      }
+    }
+  }
+}
+
+.uploadFile{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1.5px solid $mgray;
+  border-radius: 5px;
+  gap: 5px;
+  padding: 10px 0;
+  transition: 0.1s;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  &:hover{
+    color: $blue;
+    border-color: $blue;
+  }
+  p{
+    margin: 0;
+    font-weight: 500;
+  }
+  input{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
+}
+
+.logoEdit{
+  form{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 20px 0;
+    label{
+      display: flex !important;
+    }
+  }
+
+  .header{
+    margin-top: 20px;
+    .sub-header{
+      font-family: $layout-font;
+      color: $white;
+      position: relative;
+      background: linear-gradient(90deg, rgba(255,255,255,1) 26%, $bg-blue 27%);
+      padding: 20px 0;
+      z-index: 1;
+    }
+    .container{
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      width: 80%;
+      max-width: 1440px;
+      margin: 0 auto;
+    }
+    .logo{
+      width: 30%;
+      cursor: pointer;
+      background: #fff;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      display: flex;
+      align-content: center;
+      clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+      box-sizing: border-box;
+      margin-left: 10%;
+      z-index: 1;
+      img{
+        width: 250px;
+        object-fit: contain;
+      }
+    }
+    &__right{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-end;
+      width: 60%;
+      &__top{
+        display: flex;
+        align-items: center;
+        gap: 50px;
+        padding-bottom: 15px;
+        @media screen and (max-width: 1170px){
+          gap: 30px;
+        }
+        &--call, &--mail{
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          svg{
+            width: 35px;
+            height: 35px;
+            path{
+              color: $green;
+            }
+          }
+          & > div{
+            b{
+              font-weight: 600;
+              display: block;
+              line-height: 15px;
+              font-size: 15px;
+            }
+            a{
+              color: $white;
+              text-decoration: none;
+              font-size: 13px;
+            }
+          }
+        }
+        &--btn{
+          color: $white;
+          text-transform: uppercase;
+          padding: 13px 25px;
+          background: $green;
+          text-decoration: none;
+          border-radius: 5px;
+          transition: 0.3s;
+          &:hover{
+            background: $white;
+            color: $green;
+            //font-weight: 500;
+          }
+        }
+      }
+      .dec-line{
+        height: 1px;
+        width: 100%;
+        background: $white;
+        position: absolute;
+        right: 0;
+        top: 25px;
+        bottom: 0;
+        margin: auto 0;
+      }
+      &__bottom{
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        align-self: flex-start;
+        padding-top: 15px;
+        width: 100%;
+        justify-content: space-between;
+        a{
+          color: $white;
+          text-transform: uppercase;
+          text-decoration: none;
+          font-size: 16px;
+          font-weight: 600;
+          display: flex;
+          align-items: center;
+          transition: 0.2s;
+          white-space: nowrap;
+          &:hover, &.active{
+            color: $green;
+          }
+        }
+      }
+    }
+  }
+}
+
+.footerEdit{
+  form{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 20px 0;
+    label{
+      display: flex !important;
+    }
+  }
+  &__forms{
+    display: flex;
+    gap: 50px;
+  }
+  &__socialForm{
+    width: auto !important;
+    &__input{
+      display: flex;
+      align-items: center;
+      gap: 3px;
+      & > svg{
+        cursor: pointer;
+        color: $blue;
+      }
+    }
+    & > div{
+      display: flex;
+      gap: 20px;
+      & > div{
+        width: 200px;
+      }
+    }
+  }
+
+  .footer{
+    background: $bg-dgray;
+    color: #fff;
+    padding: 20px 0;
+    a{
+      color: #fff;
+    }
+    li{
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    .container{
+      width: 90%;
+      max-width: 1440px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+    }
+    &__top{
+      display: flex;
+      gap: 30px;
+      h6{
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+      }
+      & > div{
+        width: auto;
+        p{
+          margin-bottom: 13px;
+        }
+      }
+      &__scroll{
+        display: flex;
+        gap: 40px;
+        overflow-x: scroll;
+        margin-left: 20px;
+        width: 100%;
+        & > div{
+          min-width: 300px;
+        }
+        &::-webkit-scrollbar{
+          height: 3px;
+          background: $lgray;
+        }
+        &::-webkit-scrollbar-thumb{
+          background: $green;
+        }
+      }
+    }
+    &__middle{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 30px;
+      img{
+        height: 50px;
+      }
+      .socials{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+      }
+    }
+  }
+
+  .page-footer__menu{
+    li{
+      width: auto;
+      white-space: nowrap;
     }
   }
 }
