--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -16,8 +16,12 @@ $bgrey: #5A6A85;
 $mgray: #95999e;
 $lgray: #d8dde1;
 $white: #FFFFFF;
-$green: #28a745;
-$blue: #427ccb;
+$green: #29a948;
+$dark-green: #238f3d;
+$blue: #5D87FF;
+$dark-blue: #4f73d9;
+$red: #e52b2b;
+$dark-red: #cb2727;
 
   // background colors
 
